# 6502-emulator

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: cpu6502.h  log.h  utils.h
src/: cpu6502.cpp  log.cpp  main.cpp  utils.cpp
test/: Makefile  nes.cfg
test/asm/: adc.s
